--- a/src/components/TitleCards/TitleCards.css
+++ b/src/components/TitleCards/TitleCards.css
@@ -1,3 +1,28 @@
 .titlecards{
+    margin-top: 50px;
+    margin-bottom: 30px;
+
+}
+.title-cards h2{
+    margin-bottom: 12px;
+}
+.card-list{
+    gap: 10px;
+    display: flex;
+    overflow-x: scroll;
+}
+
+.card-list img{
+    width: 240px;
+    border-radius: 4px;
+    cursor: pointer;
     
+}
+.card-list .card{
+    position: relative;
+}
+.card-list .card p{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
 }
