--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
     max-width: 1000px;
     margin: 0 auto;
 }
-.footer{
+.footer-icons{
     display: flex;
     gap:20px;
     margin:40px;
@@ -18,7 +18,7 @@
     ;
     margin-bottom: 30px;list-style: none;
 }
-.copyright-text{
+.copright-text{
     color: grey;
     font-size:14px;
 
