--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -55,6 +55,7 @@
     background: #191919;
     padding: 18px 22px;
     border-radius: 2px;
+    margin-top: -50px;
     text-decoration: underline;
     z-index: 1;
     display: none;
